<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Körjournal</string>
    <string name="action_settings">Inställningar</string>
    <string name="action_sms">SMS</string>
    <string name="action_about">Om</string>
    <string name="action_about_title">Om Körjournalen</string>
    <string name="action_about_text">Körjournalen är en app för att föra en journal för dina resor med bil.\nDu kan använda GPS som trippmätare och även få start- och slutadress från google om du vill. När du vill exportera körjournalen till Excel så väljer du om du bara skall exportera tjänstekörning eller om du vill exportera alla resor. Om du vill kan du spela in ett GPS-spår som du sedan kan titta på i Google Earth eller annat program som kan tolka KML-filer.\nDetta program är skrivet av Roger Hedin i kursen Applikationsprogrammering för Android dt031g Mittuniversitetet sommaren 2013\nExporterade filer hittas här :</string>
    <string name="main_tab1">Log</string>
    <string name="main_tab2">Edit</string>
    <string name="main_tab3">Karta</string>
    <string name="main_exitwarning">Tryck igen för att avsluta applikationen</string>
    <string name="main_nopos">Ingen position ännu!</string>
    <string name="main_nosmsnumber">Du verkar inte ha angett något SMS-nummer!</string>
    <string name="main_googlemap1">Min position är: http://maps.google.com/maps?q=</string>
    <string name="main_googlemap2">&amp;amp"z=12 Time: "</string>
    <string name="main_googlemap3">" Noggrannheten är "</string>
    <string name="main_googlemap4">" m"</string>
    <string name="pref_url">http://gcmwin.dyndns.org/rec.php</string>
    <string name="pref_urlsum">"Onlinespårningen skickas till: "</string>
    <string name="pref_onlineyes">Använder server för spårning</string>
    <string name="pref_onlineno">Skickar ingen data online</string>
    <string name="pref_externyes">Lagrar data på SD-kort</string>
    <string name="pref_externno">Lagrar spår på internt minne</string>
    <string name="pref_tracksyes">Sparar GPS-spår till fil</string>
    <string name="pref_tracksno">Sparar inga spår</string>
    <string name="pref_geolocyes">Använder Google för att hitta adress</string>
    <string name="pref_geolocno">Letar inga adresser online</string>
    <string name="pref_minmove">10</string>
    <string name="pref_mapheadersummary">Inställningar för kartvyn</string>
    <string name="pref_posheadersummary">Inställningar för hur applikationen får din position</string>
    <string name="pref_postitle">Positionering</string>
    <string name="pref_sms">SMS-skickning</string>
    <string name="pref_smsnumber"></string>
    <string name="pref_smssum">Telefonnummer att skicka SMS till med positionsangivelse.</string>
    <string name="pref_smstitle">Ange mobilnr för att skicka SMS</string>
    <string name="pref_acc">35</string>
    <string name="pref_provider">Satelliter</string>
    <string name="pref_maptype">Normal</string>
    <string name="pref_mapdlgtitle">Typ av karta</string>
    <string name="pref_maptitle">Modell av karta</string>
    <string name="pref_gpstitle">Använd GPS för positionering</string>
    <string name="pref_gpssumyes">Använder GPS för spårning</string>
    <string name="pref_gpssumno">GPS av. Använder nätverk/basstationer</string>
    <string name="pref_gpssavetracks">Spara GPS-spår</string>
    <string name="pref_storageext">Spara data på SD-kort</string>
    <string name="pref_geoloc">Lagra adressen för start/stop</string>
    <string name="pref_gpsminmovetitle">Minsta positionsförändring</string>
    <string name="pref_gpsminmovedlgtitle">Minsta rörelse för att rapportera position (i meter)</string>
    <string name="pref_gpsminmovesum1">"Minsta förflyttning innan positionen lagras är "</string>
    <string name="pref_gpsminmovesum2">" m"</string>
    <string name="pref_gpsacctitle">Minsta noggrannhet</string>
    <string name="pref_gpsaccdlgtitle">Minsta noggrannhet för att rapportera position</string>
    <string name="pref_gpsaccsum1">"Positionsnoggrannhet innan lagring är "</string>
    <string name="pref_gpsaccsum2">" m"</string>
    <string name="pref_tripcorrtitle">Korrektionsvärde</string>
    <string name="pref_tripcorrsum1">"Korrektinsfaktor trip är "</string>
    <string name="pref_tripcorrsum2">" %"</string>
    <string name="pref_onlinetitle">Skicka data till server</string>
    <string name="pref_onlinetitle2">URL</string>
    <string name="pref_onlinedlgtitle">Server att skicka data till</string>
    <string name="pref_tripcorrdlgtitle">Korrektion i procent (plus eller minus) för trippmätare</string>
    <string name="pref_maptrackcolor">Blå</string>
    <string name="pref_maptrackdlgtitle">Ange vilken färg du vill ha</string>
    <string name="pref_maptracktitle">Färgen på GPS-spåret</string>
    <string name="pref_map3dtitle">Visa kartan i 3d eller 2d</string>
    <string name="pref_map3dyes">Visar kartan tiltad mellan 30 och 67 grader beroende på zoom</string>
    <string name="pref_map3dno">Visa kartan i 2D (rakt uppifrån)</string>
    <string name="pref_mapnorthup">Visa kartan norr eller färdriktning uppåt</string>
    <string name="pref_mapnorthupyes">Färdriktning på bilen är uppåt på kartvyn</string>
    <string name="pref_mapnorthupno">Norr är alltid uppåt</string>
    <string name="pref_colorred">Röd</string>
    <string name="pref_colorblue">Blå</string>
    <string name="pref_colorgreen">Grön</string>
    <string name="pref_coloryellow">Gul</string>
    <string name="pref_colormagenta">Magenta</string>
    <string name="pref_colorcyan">Cyan</string>
    <string name="pref_colorblack">Svart</string>
    <string name="pref_dlgtitle_regnr">Skriv in regnumret</string>
    <string name="pref_title_regnr">Regnummer</string>
    <string name="pref_regnr">"Regnr: "</string>
    <string name="pref_regnrvalue">AAA111</string>
    <string name="pref_email">"Epost skickas till: "</string>
    <string name="pref_email_title">Epostadress för körjournalsfil</string>
    <string name="edittrip_dlgdeletetitle">Varning!</string>
    <string name="edittrip_dlgdeletemsg">Du kommer att ta bort körningen.\nAlla spår (om det finns) kommer också att tas bort</string>
    <string name="pref_emailvalue">noname@company.com</string>
    <string name="edit_xbtn_send">Skicka körjournal med epost</string>
    <string name="edit_email_subject">Bifogad körjournalsfil</string>
    <string name="edit_email_message">Epost med bifogad fil</string>
    <string name="edit_btn_expwork">Tjänstekörning\nenbart</string>
    <string name="edit_btn_expall">Exportera\nallt</string>
    <string name="edit_dlg_exptitle">Välj vad du vill exportera</string>
    <string name="export_xls_header">Typ av resa\tÄrende/Var\tStarttid\tSluttid\tStartmätarstallning\tSlutmätarstallning\tSträcka(km)</string>
    <string name="export_xls_wrk">Tjänste</string>
    <string name="export_xls_priv">Privat</string>
    <string name="title_activity_gps_service">GpsService</string>
    <string name="service_started">Gps Service körs</string>
    <string name="service_stopped">Gps Service stoppad</string>
    <string name="service_name">Gps Service</string>
    <string name="title_activity_edit_fragment">EditFragment</string>
    <string name="title_activity_edit_trip">EditTrip</string>
    <string name="journal_db_path">/Körjournal/db/</string>
    <string name="journal_exp_path">/Körjournal/exports/</string>
    <string name="journal_new_trip">Ny Resa</string>
    <string name="journal_start_trip">Starta Resa</string>
    <string name="journal_continue_trip">Fortsätta Resa</string>
    <string name="journal_end_trip">Avsluta Resa</string>
    <string name="journal_provider_gps">gps</string>
    <string name="journal_provider_net">nätverk</string>
    <string name="journal_btn_gps_end">Avsluta k\u00f6rning\nGPS</string>
    <string name="journal_btn_man_end">Avsluta k\u00f6rning\nManuellt</string>
    <string name="journal_btn_gps_start">Starta k\u00f6rning\nGPS</string>
    <string name="journal_btn_man_start">Starta k\u00f6rning\nManuellt</string>
    <string name="journal_toast_info_getadr">Hämtar Adress</string>
    <string name="journal_toast_info_notrips">Inga resor i databasen!</string>
    <string name="journal_x_metarst_start">Mätarställning\nStart</string>
    <string name="journal_x_metarst_stop">Mätarställning\nStop</string>
    <string name="journal_x_val_def">0</string>
    <string name="journal_x_lblpurp">Uppdrag/Ärende/Resväg</string>
    <string name="journal_x_lbladrstart">Startadress</string>
    <string name="journal_x_lbladrend">Slutadress</string>
    <string name="journal_x_lblstart">Start</string>
    <string name="journal_x_lblend">Slut</string>
    <string name="journal_x_lbltrip">Trip</string>
    <string name="journal_x_lblpriv_wrk">Tjänste</string>
    <string name="journal_x_lbllat">"Lat: "</string>
    <string name="journal_x_lbllon">"Lon: "</string>
    <string name="journal_x_lbltime">"Tid: "</string>
    <string name="journal_x_lblaccuracy">"Noggr: "</string>
    <string name="journal_x_lblspeed">"Hast: "</string>
    <string name="journal_x_lblprovider">"Källa: "</string>
    <string name="export_ok">Export klar!</string>
    <string name="export_none">Inga punkter att exportera.</string>
    <string name="export_err1">Kommer inte åt SD-kortet.</string>
    <string name="export_err2">"Fel vid export: "</string>
    <string name="edit_start_time">"Starttid"</string>
    <string name="edit_end_time">"Sluttid"</string>
    <string name="edit_meter_start">"Mätarställning start"</string>
    <string name="edit_meter_end">"Mätarställning slut"</string>
    <string name="edit_mission">"Uppdrag"</string>
    <string name="edit_adr_start">"Startadress"</string>
    <string name="edit_adr_end">"Slutadress"</string>
    <string name="edit_cb_work">"Tjänste"</string>
    <string name="edit_gpstrackrec">"GPS-spår inspelat"</string>
    <string name="edit_save">"Spara"</string>
    <string name="edit_cancel">"Avbryt"</string>
    <string name="edit_delete">"Ta Bort"</string>
    <string name="edit_export_kml">"Exportera till kml"</string>

</resources>