<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relparent"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="462dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".LogFragment" >

            <TextView
                android:id="@+id/LblMeterNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/CbWork"
                android:layout_alignBottom="@+id/CbWork"
                android:lines="2"
                android:text="@string/journal_x_metarst_start" />

            <TextView
                android:id="@+id/txtVTrip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/LblTrip"
                android:layout_below="@+id/LblTrip"
                android:text="@string/journal_x_val_def"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/txtVMission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/LblMission"
                android:layout_below="@+id/LblMission"
                android:lines="2" />

            <TextView
                android:id="@+id/LblMission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txtVTrip"
                android:layout_below="@+id/txtVTrip"
                android:text="@string/journal_x_lblpurp" />

            <TextView
                android:id="@+id/txtMeterStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/LblTrip"
                android:layout_below="@+id/LblStop"
                android:text="@string/journal_x_val_def"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/txtMeterStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/LblMeterNow"
                android:layout_below="@+id/LblMeterNow"
                android:text="@string/journal_x_val_def"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/LblStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txtMeterStart"
                android:layout_below="@+id/txtMeterStart"
                android:text="@string/journal_x_lblend" />

            <TextView
                android:id="@+id/LblTrip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/LblStop"
                android:layout_below="@+id/txtMeterStop"
                android:text="@string/journal_x_lbltrip" />

            <CheckBox
                android:id="@+id/CbWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="65dp"
                android:checked="true"
                android:text="@string/journal_x_lblpriv_wrk" />

            <TableLayout
                android:id="@+id/tblay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/CbWork"
                android:layout_below="@+id/LblMeterNow" >

                <TableRow
                    android:id="@+id/tblr1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/txtMaptrip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/journal_x_lbllat"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/txtLat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>

                <TableRow
                    android:id="@+id/tblr2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/journal_x_lbllon"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/txtLon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>

                <TableRow
                    android:id="@+id/tblr3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/journal_x_lbltime"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/txtLastPosTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>

                <TableRow
                    android:id="@+id/tblr4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/journal_x_lblaccuracy"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/txtAcc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>

                <TableRow
                    android:id="@+id/tblr5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/journal_x_lblspeed"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/txtSpeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>

                <TableRow
                    android:id="@+id/tblr6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/journal_x_lblprovider"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/txtProv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/lblStartadr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txtVMission"
                android:layout_below="@+id/txtVMission"
                android:text="@string/journal_x_lbladrstart" />

            <TextView
                android:id="@+id/txtAdrStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/lblStartadr"
                android:layout_below="@+id/lblStartadr"
                android:lines="2" />

            <TextView
                android:id="@+id/lblEndadr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txtAdrStart"
                android:layout_below="@+id/txtAdrStart"
                android:text="@string/journal_x_lbladrend" />

            <TextView
                android:id="@+id/txtAdrEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/lblEndadr"
                android:layout_below="@+id/lblEndadr"
                android:lines="2" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_alignLeft="@+id/lblEndadr"
                android:layout_alignTop="@+id/lblEndadr"
                android:background="@android:color/darker_gray" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_alignLeft="@+id/lblStartadr"
                android:layout_alignTop="@+id/lblStartadr"
                android:background="@android:color/darker_gray" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_alignLeft="@+id/LblMission"
                android:layout_alignTop="@+id/LblMission"
                android:background="@android:color/darker_gray" />

        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false" >

        <Button
            android:id="@+id/btnStartGps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/journal_btn_gps_start" />

        <Button
            android:id="@+id/btnStartMan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/journal_btn_man_start" />
    </LinearLayout>

</RelativeLayout>